Fix overlapping label on simple normalized chart and update docs (#932)
* Fix overlapping label on simple normalized chart and update docs

--- a/src/components/SimpleNormalizedChart/SimpleNormalizedChart.scss
+++ b/src/components/SimpleNormalizedChart/SimpleNormalizedChart.scss
@@ -39,8 +39,6 @@
 }
 
 .VerticalLabelContainer {
-  display: flex;
-  flex-flow: column wrap;
   margin: 0 $spacing-loose;
   padding: 0;
 }
